<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView android:id="@+id/status_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/ticket_header"
            android:textColor="@color/white"
            android:gravity="start"
            android:textSize="25sp"/>

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <!-- Ticket Number Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/ticket_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/white"
                android:hint="@string/ticket_number" />
        </android.support.design.widget.TextInputLayout>

        <!-- Ticket Range Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/range_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/white"
                android:hint="@string/ticket_range" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/save_ticket"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/save_data"
            android:textColor="@color/white"
            style="@style/AppTheme.RoundedCornerMaterialButton"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/read_ticket"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/read_ticket"
            android:textColor="@color/white"
            style="@style/AppTheme.RoundedCornerMaterialButton.Gray"/>

    </LinearLayout>
</ScrollView>
