<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mindcriminal.eligalaapp.MainActivity">

    <TextView
        android:id="@+id/status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:gravity="center"
        android:text="@string/ticket_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/read_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/save_ticket"
        android:layout_alignBottom="@+id/save_ticket"
        android:layout_alignStart="@+id/auto_focus"
        android:text="@string/read_ticket" />

    <Button
        android:id="@+id/save_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="63dp"
        android:layout_marginEnd="40dp"
        android:text="@string/save_data" />

    <CheckBox
        android:id="@+id/auto_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_ticket"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="34dp"
        android:checked="true"
        android:text="@string/auto_focus" />

    <CheckBox
        android:id="@+id/use_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/auto_focus"
        android:layout_alignBottom="@+id/auto_focus"
        android:layout_alignStart="@+id/save_ticket"
        android:checked="false"
        android:text="@string/use_flash" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="150dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/prize_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Prize Number" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
